--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,32 @@
 
 .container {
   margin-top: 10px;
+  min-width: 650px;
 }
 
 form.dropzone {
   margin-top: 10px;
+}
+
+form.dropzone .dz-message span {
+  font-size: 27px;
+  color: grey;
+}
+
+#customer_order_number {
+  height: 100px;
+  width: 60%;
+  border: 2px solid black;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  
+  margin-left: 20%;
+  margin-right: 20%;
+  
+  font-size: 30px;
+  line-height: 95px;
+}
+
+#customer_order_number:hover {
+  cursor: pointer;
 }
