remove error message on dropzone fileupload

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ form.dropzone .dz-message span {
   color: grey;
 }
 
+.dz-error-message {
+  display: none !important
+}
+
 #customer_order_number {
   height: 100px;
   width: 60%;
