--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,9 @@ form.dropzone .dz-message span {
 }
 
 #customer_order_number {
-  height: 100px;
+  height: 76px;
   width: 60%;
-  border: 2px solid black;
+  border-bottom: 2px solid rgb(194, 202, 216) !important;
   margin-bottom: 10px;
   margin-top: 10px;
   
@@ -31,9 +31,18 @@ form.dropzone .dz-message span {
   margin-right: 20%;
   
   font-size: 30px;
-  line-height: 95px;
+  line-height: 94px;
 }
 
 #customer_order_number:hover {
   cursor: pointer;
+}
+
+.left_side_container, .right_side_container {
+  padding-top: 10px;
+}
+
+/* fix active log col  */
+.feeds li .col1 > .cont {
+  margin-right: 0px !important; 
 }
